--- a/content/blog.njk
+++ b/content/blog.njk
@@ -1,10 +1,10 @@
 ---js
 const eleventyNavigation = {
-	key: "Archive",
+	key: "lipu ale",
 	order: 2
 };
 ---
-<h1>Archive</h1>
+<h1>lipu ale</h1>
 
 {% set postslist = collections.posts %}
 {% include "postslist.njk" %}
